--- a/toDoList.css
+++ b/toDoList.css
@@ -37,14 +37,12 @@ body {
 }
 
 .todolist-footer {
-	padding: 20px 160px 10px 150px;
-}
-.todolist-footer form {
 	display: flex;
 	justify-content: space-between;
+	padding: 20px 160px 10px 150px;
 }
 .footer-btn {
-	height: 20px;
+	height: 26px;
 	border: 1px solid white;
 	font-size: 15px;
 	line-height: 15px;
@@ -53,7 +51,12 @@ body {
 }
 .footer-btn:hover {
 	border: 1px solid rgba(190, 190, 190, 0.5);
+	border-radius: 3px;
 }
+.footer-btn:focus {
+	outline: none;
+}
+
 .list-of-todo li {
 	width: 80%;
 	line-height: 25px;
