--- a/styles/toDoList.css
+++ b/styles/toDoList.css
@@ -15,7 +15,7 @@ body {
 }
 
 .new-task {
-	width: 70%;
+	width: 72%;
 	height: 20px;
 }
 .new-task:focus {
@@ -39,7 +39,7 @@ body {
 .todolist-footer {
 	display: flex;
 	justify-content: space-between;
-	padding: 20px 160px 10px 150px;
+	padding: 20px 19% 10px 29%;
 }
 .footer-btn {
 	height: 26px;
@@ -54,15 +54,16 @@ body {
 	border-radius: 3px;
 }
 .footer-btn:focus {
-	outline: none;
+	outline-color: rgba(190, 190, 190, 0.5);
+	-moz-outline-radius: 3px;
 }
 
 .list-of-todo {
 	list-style: none;
 }
 .list-of-todo li {
-	width: 80%;
-	line-height: 25px;
+	width: 95%;
+	line-height: 28px;
 }
 .list-of-todo li:nth-child(even) {
 	background: #f3ebeb;
@@ -76,4 +77,9 @@ body {
 }
 .list-of-todo li:hover i {
 	display: inline-block;
+}
+.task-number {
+	display: inline-block;
+	height: 28px;
+	background: white;
 }
